fix intro spacing, rewrite intro text

--- a/assets/styles/_templates.scss
+++ b/assets/styles/_templates.scss
@@ -114,14 +114,10 @@
 
 .main--homepage__header__title {
   text-align: center;
-  padding-top: $v*3;
-  padding-bottom: $v*1;
-  margin-top: 120px;
-  margin-bottom: 120px;
-  @media (max-width: 1000px) {
-    max-width: none;
-    margin-top: 12vw;
-    margin-bottom: 12vw;
+  margin-top: 9em;
+  margin-bottom: 4.5em;
+  @media (max-width: $bp-xs-sm) {
+    margin-top: 7.5em;
   }
 }
 
